# info-geo

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: exponential.rs  fisher.rs  lib.rs  manifold.rs  natural.rs
tests/: integration.rs
